# kalshi-intelligence

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docs/: 01_api_integration.md  02_market_scanning.md  03_hedging_framework.md  04_probability_estimation.md  05_competitive_intelligence.md  06_legal_tax.md  07_execution_roadmap.md
src/kalshi_intel/: __init__.py  cli.py  config.py
src/kalshi_intel/analysis/: fees.py  hedging.py  position_sizing.py  probability.py
src/kalshi_intel/analysis/prompts/: market_analysis.py  probability_est.py
src/kalshi_intel/client/: auth.py  exceptions.py  models.py  rate_limiter.py  rest.py  websocket.py
src/kalshi_intel/data/: cache.py  historical.py  sources.py
src/kalshi_intel/reports/: daily_report.py  formatters.py  trade_log.py
src/kalshi_intel/scanner/: filters.py  scanner.py  scoring.py
src/kalshi_intel/utils/: logging.py  money.py
tests/: conftest.py
tests/analysis/: test_fees.py  test_hedging.py  test_position_sizing.py
tests/client/: test_auth.py  test_models.py  test_rate_limiter.py
tests/fixtures/: event_response.json  market_response.json  orderbook_response.json  portfolio_response.json
tests/scanner/: test_filters.py  test_scoring.py
