[project]
name = "kalshi-intel"
version = "0.1.0"
description = "Kalshi Market Intelligence System - Research & Analysis Tools"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"

dependencies = [
    "httpx>=0.28",
    "websockets>=14.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "typer>=0.15",
    "rich>=13.9",
    "cryptography>=44.0",
    "anthropic>=0.42",
    "openai>=1.60",
    "pandas>=2.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.25",
    "pytest-mock>=3.14",
    "ruff>=0.9",
    "mypy>=1.14",
    "respx>=0.22",
    "time-machine>=2.16",
]
data-sources = [
    "fredapi>=0.5",
    "requests>=2.32",
]

[project.scripts]
kalshi-intel = "kalshi_intel.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kalshi_intel"]

[tool.ruff]
target-version = "py311"
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/kalshi_intel/analysis/prompts/*.py" = ["E501"]
"src/kalshi_intel/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that hit real APIs (deselect with '-m not integration')",
    "slow: marks slow tests",
]
